--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "node tracker.js"
   },
   "dependencies": {
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "express": "^4.19.2"
   }
 }
